--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pixi.js": "^5.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
